--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
         <artifactId>spring-context</artifactId>
         <version>3.2.10.RELEASE</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>3.2.10.RELEASE</version>
+    </dependency>
   </dependencies>
   <properties>
     <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
