--- a/pom.xml
+++ b/pom.xml
@@ -31,18 +31,41 @@
   		<version>4.11</version>
   		<scope>test</scope>
   	</dependency>
+
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1</version>
+    </dependency>
+  	
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>3.2.10.RELEASE</version>
+        <version>${spring.version}</version>
     </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
-        <version>3.2.10.RELEASE</version>
+        <version>${spring.version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.9.13</version>
+    </dependency>
+
   </dependencies>
+
   <properties>
     <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
+<!-- 
+    <spring.version>3.2.10.RELEASE</spring.version>
+ -->
+    <spring.version>4.0.6.RELEASE</spring.version>
   </properties>
 </project>
