--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
         <version>1.9.13</version>
     </dependency>
 
+    <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
+
   </dependencies>
 
   <properties>
