--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <display-name>draft</display-name>
 
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.jspx</welcome-file>
   </welcome-file-list>
 
   <servlet>
@@ -19,7 +19,7 @@
 
   <servlet-mapping>
       <servlet-name>dispatcher</servlet-name>
-      <url-pattern>/d/*</url-pattern>
+      <url-pattern>/s/*</url-pattern>
   </servlet-mapping>
 
   <listener>
