--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 
   <welcome-file-list>
     <welcome-file>index.jspx</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 
   <filter>  
