--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
     providedCompile "javax.servlet:javax.servlet-api:3.0.1"
 	providedCompile "javax.servlet:jsp-api:2.0"
-	
+
     compile "javax.servlet:jstl:1.2"
     compile "org.codehaus.groovy:groovy-all:2.3.4"
     compile "commons-logging:commons-logging:1.1"
@@ -53,6 +53,8 @@ dependencies {
     compile "org.springframework:spring-web:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+
+	compile "org.jvnet.jax-ws-commons.spring:jaxws-spring:1.9"
 
     testCompile 'junit:junit:4.11'
 }
