--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile "org.springframework:spring-context:${springVersion}"
     compile "org.springframework:spring-web:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
+    compile "org.springframework:spring-jdbc:${springVersion}"
     compile "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
 
 	compile "org.jvnet.jax-ws-commons.spring:jaxws-spring:1.9"
