--- a/src/main/resources/conf/spring/jdbc.properties
+++ b/src/main/resources/conf/spring/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=
-jdbc.url=
-jdbc.username=
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.url=jdbc:hsqldb:file:.hsqldb/mydb;shutdown=true
+jdbc.username=SA
 jdbc.password=
